# sudoku

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  author.md
config/: SudokuConfig.h.in
data/: basic.sdk  easy.sdk  max.sdk  new_input.txt
docs/: author.md
src/: convert.cpp  convert_data.cpp  loadfile.cpp  main.cpp  reading.cpp  savefile.cpp  test.cpp
src/classes/: Action.cpp  Action.hpp  ActionGame.hpp  Actions.hpp  GameController.hpp  Save.hpp  SaveGame.hpp  Sudoku.cpp  Sudoku.hpp  SudokuBank.hpp  SudokuBoard.hpp  SudokuGame.cpp  SudokuGame.hpp  ~SaveGame.hpp
src/controller/: GameController.cpp  GameController.hpp
src/functions/: Validate.hpp
src/lib/cli/: Argument.hpp  Cli.hpp  Reference.hpp
src/lib/explorer/: Explorer.hpp  ExplorerFunctions.hpp  FileHandler.hpp  List.hpp
src/lib/format/: fstring.hpp  style.hpp
src/middleware/: Validate.cpp  Validate.hpp
src/model/: Actions.hpp  Save.cpp  Save.hpp  Sudoku.cpp  Sudoku.hpp
src/view/: View.cpp  View.hpp
